examples/test/testpolicy10327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10327
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key15: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value40
          key17: value11
          key22: value20
      podSelector:
        matchLabels:
          key18: value18
          key29: value12
